<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_2"
    tools:context=".ui.DashBoardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_sports"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_choose_more_than_one"
        android:textColor="@color/gray_on"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_dash"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"/>


    <Button
        android:id="@+id/btn_continu_dash"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/continu"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/btn_signin"
        android:layout_marginTop="120dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"/>

</LinearLayout>