<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_2"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@drawable/profile"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/ahmed_ramadan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linaer"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/profileName"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/my_profile"
                android:background="@drawable/bg_orange_btn"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linaer"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_icon"
                    android:src="@drawable/ic_person"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ahmed_ramadan"
                        android:textSize="15sp"
                        android:textColor="@color/gray_on"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_icon"
                    android:src="@drawable/ic_email_24"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ahmedtramadan4_gmail_com"
                        android:textSize="15sp"
                        android:textColor="@color/gray_on"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_icon"
                    android:src="@drawable/ic_phone_24"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20_109_464_2577"
                        android:textSize="15sp"
                        android:textColor="@color/gray_on"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_icon"
                    android:src="@drawable/ic_location_on_24"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cairo_egypt"
                        android:textSize="15sp"
                        android:textColor="@color/gray_on"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_24"
                    android:layout_gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_icon"
                    android:src="@drawable/ic_logout_24"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout_from_your_account"
                        android:textSize="15sp"
                        android:textColor="@color/gray_on"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_24"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>