<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_2"
    tools:context=".ui.SignUpActivity">


    <ImageView
        android:id="@+id/ic_back_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:padding="20dp"
        android:src="@drawable/ic_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/edt_email_signup"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/gray_on"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />


    <EditText
        android:id="@+id/edt_password_signup"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/gray_on"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_signup"/>

    <EditText
        android:id="@+id/edt_password_confirm_signup"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/gray_on"
        android:hint="@string/confirm_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_signup"/>


    <Button
        android:id="@+id/btn_signup_create"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/btn_signin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_confirm_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>