<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_2"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/cardView"
        android:layout_width="260dp"
        android:layout_height="275dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_bk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/imbabi" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_all_n_about_sport"
            android:textSize="28.28sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_start_it"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/gray_on" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_signin"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/sigup_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_signup"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>